@@ -12,7 +12,7 @@
 		"phpunit/phpunit": "9.5.14",
 		"woocommerce/woocommerce-sniffs": "0.1.0",
 		"dave-liddament/sarb": "^1.1",
-		"yoast/phpunit-polyfills": "1.0.3"
+		"yoast/phpunit-polyfills": "1.1.0"
 	},
 	"scripts": {
 		"phpcs": [
