@@ -61,6 +61,23 @@ class WCS_Subscription_Data_Store_CPT extends WC_Order_Data_Store_CPT implements
 	);
 
 	/**
+	 * Custom setters for subscription internal props in the form meta_key => set_|get_{value}.
+	 *
+	 * @var string[]
+	 */
+	protected $internal_data_store_key_getters = array(
+		'_schedule_start'                           => 'schedule_start',
+		'_schedule_trial_end'                       => 'schedule_trial_end',
+		'_schedule_next_payment'                    => 'schedule_next_payment',
+		'_schedule_cancelled'                       => 'schedule_cancelled',
+		'_schedule_end'                             => 'schedule_end',
+		'_schedule_payment_retry'                   => 'schedule_payment_retry',
+		'_subscription_renewal_order_ids_cache'     => 'renewal_order_ids_cache',
+		'_subscription_resubscribe_order_ids_cache' => 'resubscribe_order_ids_cache',
+		'_subscription_switch_order_ids_cache'      => 'switch_order_ids_cache',
+	);
+
+	/**
 	 * Constructor.
 	 */
 	public function __construct() {
@@ -603,5 +620,122 @@ class WCS_Subscription_Data_Store_CPT extends WC_Order_Data_Store_CPT implements
 	 */
 	public function get_subscriptions_count_by_status() {
 		return (array) wp_count_posts( 'shop_subscription' );
+	}
+
+	/**
+	 * Sets the subscription's start date.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param string $date
+	 */
+	public function set_schedule_start( $subscription, $date ) {
+		update_post_meta( $subscription->get_id(), '_schedule_start', $date );
+	}
+
+	/**
+	 * Sets the subscription's trial end date.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param string $date
+	 */
+	public function set_schedule_trial_end( $subscription, $date ) {
+		update_post_meta( $subscription->get_id(), '_schedule_trial_end', $date );
+	}
+
+	/**
+	 * Sets the subscription's next payment date.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param string $date
+	 */
+	public function set_schedule_next_payment( $subscription, $date ) {
+		update_post_meta( $subscription->get_id(), '_schedule_next_payment', $date );
+	}
+
+	/**
+	 * Sets the subscription's cancelled date.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param string $date
+	 */
+	public function set_schedule_cancelled( $subscription, $date ) {
+		update_post_meta( $subscription->get_id(), '_schedule_cancelled', $date );
+	}
+
+	/**
+	 * Sets the subscription's end date.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param string $date
+	 */
+	public function set_schedule_end( $subscription, $date ) {
+		update_post_meta( $subscription->get_id(), '_schedule_end', $date );
+	}
+
+	/**
+	 * Sets the subscription's payment retry date.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param string $date
+	 */
+	public function set_schedule_payment_retry( $subscription, $date ) {
+		update_post_meta( $subscription->get_id(), '_schedule_payment_retry', $date );
+	}
+
+	/**
+	 * Manually sets the list of subscription's renewal order IDs stored in cache.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param array           $renewal_order_ids
+	 */
+	public function set_renewal_order_ids_cache( $subscription, $renewal_order_ids ) {
+		update_post_meta( $subscription->get_id(), '_subscription_renewal_order_ids_cache', $renewal_order_ids );
+	}
+
+	/**
+	 * Manually sets the list of subscription's resubscribe order IDs stored in cache.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param array           $resubscribe_order_ids
+	 */
+	public function set_resubscribe_order_ids_cache( $subscription, $resubscribe_order_ids ) {
+		update_post_meta( $subscription->get_id(), '_subscription_resubscribe_order_ids_cache', $resubscribe_order_ids );
+	}
+
+	/**
+	 * Manually sets the list of subscription's switch order IDs stored in cache.
+	 *
+	 * This method is not intended for public use and is called by @see OrdersTableDataStore::backfill_post_record()
+	 * when backfilling subscription data to the WP_Post database.
+	 *
+	 * @param WC_Subscription $subscription
+	 * @param array           $switch_order_ids
+	 */
+	public function set_switch_order_ids_cache( $subscription, $switch_order_ids ) {
+		update_post_meta( $subscription->get_id(), '_subscription_switch_order_ids_cache', $switch_order_ids );
 	}
 }
