@@ -83,7 +83,9 @@ class WCS_Email_Cancelled_Subscription extends WC_Email {
 			return;
 		}
 
-		update_post_meta( $subscription->get_id(), '_cancelled_email_sent', 'true' );
+		$subscription->set_cancelled_email_sent( 'true' );
+		$subscription->save();
+
 		$this->send( $this->get_recipient(), $this->get_subject(), $this->get_content(), $this->get_headers(), $this->get_attachments() );
 	}
 
